# gpu-dso-stacker

./: .gitignore  APPLE_SILICON_METAL_PLAN.md  CLAUDE.md  CMakeLists.txt  ERRORS.md  FUNDING.yml  GEMINI-ERRORS.md  GEMINI-PROCESS.md  HANDOFF_pipeline_refactor.md  LICENSE  README.ko.md  README.md  THIRD_PARTY_LICENSES  asdf.yaml  bench.sh  dso_stacker_gui.spec  main.cpp  plan-cpu.md  plan-gpu.md  vcpkg.json
.github/workflows/: ci.yml  release.yml
docs/: index.html  index.ko.html
include/: background.h  background_gpu.h  calibration.h  calibration_gpu.h  centroid_lm.h  centroid_lm_gpu.h  compat.h  csv_parser.h  debayer_cpu.h  debayer_gpu.h  dso_types.h  fits_io.h  frame_load.h  frame_quality.h  getopt_port.h  image_io.h  integration.h  integration_gpu.h  integration_limits.h  lanczos_cpu.h  lanczos_gpu.h  pipeline.h  ransac.h  ransac_gpu.h  raw_io.h  star_detect_cpu.h  star_detect_gpu.h  transform.h  white_balance.h  white_balance_gpu.h
python/: compute_transforms.py  generate_test_frames.py  stacker.py
src/: background.c  background_gpu.cu  calibration.c  calibration_gpu.cu  centroid_lm.c  centroid_lm_gpu.cu  csv_parser.c  debayer_cpu.c  debayer_gpu.cu  fits_io.c  frame_load.c  frame_quality.c  getopt_port.c  image_io.c  integration.c  integration_gpu.cu  lanczos_cpu.c  lanczos_gpu.cu  pipeline.cu  pipeline_cpu.c  pipeline_cuda_stub.c  pipeline_dispatch.c  pipeline_metal.mm  pipeline_metal_stub.c  ransac.c  ransac_gpu.cu  raw_io.c  star_detect_cpu.c  star_detect_gpu.cu  transform.c  white_balance.c  white_balance_gpu.cu
src/GUI/: fits_meta.py  main.py  main_window.py  project.py  requirements.txt  runner.py  test_runner_env.py  ui_density.py  utils.py
src/GUI/widgets/: calib_tab.py  frame_table.py  light_tab.py  stacking_options_tab.py
test/: ransac_status.cpp  star_coords_generator.c  star_coords_generator.h  star_detect_overlay.cpp
tests/: test_audit.c  test_background.c  test_calibration.c  test_centroid_lm.c  test_color.c  test_cpu.c  test_cross_stage.c  test_debayer_cpu.c  test_frame_quality.c  test_framework.h  test_gpu.cu  test_image_io.c  test_integration_gpu.cu  test_numerical.c  test_pipeline_backend.c  test_pipeline_cpu.c  test_ransac.c  test_raw_io.c  test_star_detect.c  test_transform.c  test_white_balance.c
